[project]
name = "bleak-retry-connector"
version = "4.0.0"
description = "A connector for Bleak Clients that handles transient connection failures"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Documentation" = "https://bleak-retry-connector.readthedocs.io"
"Repository" = "https://github.com/bluetooth-devices/bleak-retry-connector"
"Bug Tracker" = "https://github.com/bluetooth-devices/bleak-retry-connector/issues"
"Changelog" = "https://github.com/bluetooth-devices/bleak-retry-connector/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "bleak_retry_connector", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
bleak = {version = ">=1", python = ">=3.10,<3.14"}
async-timeout = {version = ">=3.0.0", python = "<3.11"}
dbus-fast = {version = ">=1.14.0", markers = "platform_system == \"Linux\""}
bluetooth-adapters = {version = ">=0.15.2", markers = "platform_system == \"Linux\"", python = ">=3.10,<3.14"}

[tool.poetry.group.dev.dependencies]
dbus-fast = ">=1.4.0"
pytest = "^8.4"
pytest-cov = "^6.2"
pytest-asyncio = "^1.0.0"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/bleak_retry_connector/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=bleak_retry_connector --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["bleak_retry_connector", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
